--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
         <title>Spendly</title>
     </head>
     <body>
-        <div id="root"></div>
+        <div
+            id="root"
+            style="
+                background-color: #090910;
+                min-width: 375px;
+                min-height: 600px;
+            "
+        ></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
